Set mm2 params using `exec`